# astutus

./: .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  blames.json  bot.py  default_config.ini  heroku.yml  manage.py  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
astutus/: __init__.py  bot.py
astutus/data/: RaidSkillInfo.txt
astutus/modules/: autorole.py  censor.py  channels.py  fun.py  greet.py  help.py  info.py  levels.py  logging.py  moderation.py  music.py  patrons.py  settings.py  timers.py  tracking.py  tt.py  utility.py  utils.py
astutus/utils/: __init__.py  chat_formatting.py  checks.py  converters.py  etc.py  redis.py  setup.py  time.py
modules/: autorole.py  censor.py  channels.py  curation.py  disable.py  fun.py  greet.py  help.py  info.py  levels.py  logging.py  math.py  moderation.py  music.py  patrons.py  postgre.py  premium.py  restrictions.py  sar.py  settings.py  setup.py  starboard.py  timers.py  todo.py  tracking.py  tt.py  utility.py  worldchat.py  xp.py
modules/data/: ArtifactColours.json  ArtifactInfo.csv  EquipmentInfo.csv  GoldSources.json  Help.json  PassiveSkillInfo.csv  RaidCards.json  RaidDecks.json  RaidEnemyInfo.csv  RaidLevelInfo.csv  RaidSkillInfo.csv  SkillTree.json  SkillTreeInfo.csv  TTReductions.json  TourneyData.json
modules/utils/: cdn.py  checks.py  cleverbot.py  converters.py  discord_search.py  etc.py  redis.py  (+4 more)
whl/: asyncpg-0.18.3-cp38-cp38m-win_amd64.whl  typed_ast-1.3.5-cp38-cp38m-win_amd64.whl
(+3 files in other folders)
