[tool.poetry]
name = "astutus"
version = "0.1.0"
description = ""
authors = ["lxmcneill <lxmcneill@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/lxmcneill/astutus"
keywords = ["discord", "bot"]

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^0.13.2"
"discord.py" = "^1.1"
aioredis = "^1.2"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
pylint = "^2.3"
pytest = "^3.0"

[tool.poetry.extras]
uvloop = "*"
